--- a/DGN/Views/ContactUs/Index.cshtml
+++ b/DGN/Views/ContactUs/Index.cshtml
@@ -21,12 +21,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.ActivityTime)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LocationLatitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LocationLongitude)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -44,15 +38,9 @@
                     @Html.DisplayFor(modelItem => item.ActivityTime)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.LocationLatitude)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LocationLongitude)
-                </td>
-                <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
                 </td>
             </tr>
         }
@@ -61,6 +49,7 @@
 
 <script type='text/javascript'>
 
+    // Load the map.
     function loadMapScenario() {
         var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
             credentials: 'AoJqoJIUGkHJa_PyKKY6Bfmq8csIOizScrqoo53GElotN2XfQecO8ExsN4y2NJXV',
@@ -68,10 +57,10 @@
             zoom: 5
         });
 
-        // Create the infobox for the pushpin
+        // Create the infobox for the pushpin.
         var infobox = null;
 
-        //declare addMarker function
+        //Declare addMarker function
         function addMarker(latitude, longitude, title, activity, phone, pid)
         {
             var marker = new Microsoft.Maps.Pushpin(new Microsoft.Maps.Location(latitude, longitude), { color: 'green' });
@@ -83,7 +72,7 @@
             marker.metadata = {
                 id: pid,
                 title: title,
-                description: "Activity hours: " + activity + '\n' + "Phone number: " + phone
+                description: "Activity Hours: " + activity + '\n' + "Phone Nuber: " + phone
             };
 
             Microsoft.Maps.Events.addHandler(marker, 'mouseout', hideInfobox);
@@ -95,7 +84,9 @@
         };
 
         function showInfobox(e) {
+            //Make sure the infobox has metadata to display.
             if (e.target.metadata) {
+                //Set the infobox options with the metadata of the pushpin.
                 infobox.setOptions({
                     location: e.target.getLocation(),
                     title: e.target.metadata.title,
@@ -125,3 +116,4 @@
     <div class="col-md-12 map">
         <div id="myMap" style="width:100%; height:610px;"></div>
     </div>
+</div>
