Switch PhoneNumber with Email Address + separate the JS from cshtml file.

--- a/DGN/Views/Branches/Details.cshtml
+++ b/DGN/Views/Branches/Details.cshtml
@@ -17,10 +17,10 @@
             @Html.DisplayFor(model => model.BranchName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.Email)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
+            @Html.DisplayFor(model => model.Email)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ActivityTime)
