--- a/DGN/Views/Branches/Edit.cshtml
+++ b/DGN/Views/Branches/Edit.cshtml
@@ -19,13 +19,13 @@
                 <span asp-validation-for="BranchName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ActivityTime" class="control-label"></label>
-                <input asp-for="ActivityTime" class="form-control" />
+                <textarea asp-for="ActivityTime" class="form-control"></textarea>
                 <span asp-validation-for="ActivityTime" class="text-danger"></span>
             </div>
             <div class="form-group">
