--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.BranchName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ActivityTime)
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.BranchName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ActivityTime)
@@ -46,70 +46,7 @@
         }
     </tbody>
 </table>
-
-<script type='text/javascript'>
-
-    // Load the map.
-    function loadMapScenario() {
-        var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
-            credentials: 'AoJqoJIUGkHJa_PyKKY6Bfmq8csIOizScrqoo53GElotN2XfQecO8ExsN4y2NJXV',
-            mapTypeId: Microsoft.Maps.MapTypeId.road,
-            zoom: 5
-        });
-
-        // Create the infobox for the pushpin.
-        var infobox = null;
-
-        //Declare addMarker function
-        function addMarker(latitude, longitude, title, activity, phone, pid)
-        {
-            var marker = new Microsoft.Maps.Pushpin(new Microsoft.Maps.Location(latitude, longitude), { color: 'green' });
-
-            infobox = new Microsoft.Maps.Infobox(marker.getLocation(), {
-                visible : false
-            });
-
-            marker.metadata = {
-                id: pid,
-                title: title,
-                description: "Activity Hours: " + activity + '\n' + "Phone Nuber: " + phone
-            };
-
-            Microsoft.Maps.Events.addHandler(marker, 'mouseout', hideInfobox);
-            Microsoft.Maps.Events.addHandler(marker, 'mouseover', showInfobox);
-
-            infobox.setMap(map);
-            map.entities.push(marker);
-            marker.setOptions({ enableHoverStyle: true });
-        };
-
-        function showInfobox(e) {
-            //Make sure the infobox has metadata to display.
-            if (e.target.metadata) {
-                //Set the infobox options with the metadata of the pushpin.
-                infobox.setOptions({
-                    location: e.target.getLocation(),
-                    title: e.target.metadata.title,
-                    description: e.target.metadata.description,
-                    visible: true
-                });
-            }
-        }
-
-        function hideInfobox(e) {
-            infobox.setOptions({ visible: false });
-        }
-
-        //add markers to map
-        @if (Model != null)
-        {
-            foreach (var item in Model)
-            {
-                @:addMarker(@item.LocationLatitude, @item.LocationLongitude, '@item.BranchName', '@item.ActivityTime', @item.PhoneNumber, @item.Id);
-            }
-        }
-    }
-</script>
+<script src="~/js/branches.js" asp-append-version="true"></script>
 <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
 
 <div class="row">
