--- a/DGN/Views/Passwords/Create.cshtml
+++ b/DGN/Views/Passwords/Create.cshtml
@@ -17,6 +17,16 @@
                 <select asp-for="Id" class ="form-control" asp-items="ViewBag.Id"></select>
             </div>
             <div class="form-group">
+                <label asp-for="Hash" class="control-label"></label>
+                <input asp-for="Hash" class="form-control" />
+                <span asp-validation-for="Hash" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Salt" class="control-label"></label>
+                <input asp-for="Salt" class="form-control" />
+                <span asp-validation-for="Salt" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
