--- a/DGN/Views/Users/Login.cshtml
+++ b/DGN/Views/Users/Login.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Login</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,23 +14,25 @@
             <div class="form-group">
                 <label class="control-label">Email</label>
                 <input name="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Password</label>
-                <input type="text" name="password" class="form-control"/>
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <input type="text" name="password" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
+            @if (ViewBag.Error != null)
+            {
+                <div class="text-danger">@ViewBag.Error</div>
+            }
         </form>
+        <div>
+            Not registered? <a asp-action="Register">Click here</a> to register
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
