--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Register</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -53,18 +52,20 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Password</label>
-                <input type="text" name="plainPass" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+                <input type="text" name="plainPass" class="form-control" />
             </div>
             <div class="form-group">
                 <label class="control-label">Confirm Password</label>
-                <input type="text" name="confirmPass" />
+                <input type="text" name="confirmPass" class="form-control" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Register" class="btn btn-primary" />
-                
             </div>
         </form>
+        @if (ViewBag.Error != null)
+        {
+            <div class="text-danger">@ViewBag.Error</div>
+        }
     </div>
 </div>
 
