--- a/DGN/Views/Articles/Create.cshtml
+++ b/DGN/Views/Articles/Create.cshtml
@@ -29,11 +29,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+            @*<div class="form-group">
+            <label asp-for="UserId" class="control-label"></label>
+            <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="CreationTimestamp" class="control-label"></label>
@@ -44,7 +44,7 @@
                 <label asp-for="LastUpdatedTimestamp" class="control-label"></label>
                 <input asp-for="LastUpdatedTimestamp" class="form-control" />
                 <span asp-validation-for="LastUpdatedTimestamp" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
