--- a/DGN/Views/Articles/Edit.cshtml
+++ b/DGN/Views/Articles/Edit.cshtml
@@ -33,19 +33,19 @@
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="CreationTimestamp" class="control-label"></label>
-                <input asp-for="CreationTimestamp" class="form-control" />
+                <input asp-for="CreationTimestamp" class="form-control" readonly />
                 <span asp-validation-for="CreationTimestamp" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastUpdatedTimestamp" class="control-label"></label>
-                <input asp-for="LastUpdatedTimestamp" class="form-control" />
+                <input asp-for="LastUpdatedTimestamp" class="form-control" readonly />
                 <span asp-validation-for="LastUpdatedTimestamp" class="text-danger"></span>
             </div>
             <div class="form-group">
