Remvoed Required field in Comment model and changed the display of relatedarticleid to title of the article

--- a/DGN/Views/Comments/Delete.cshtml
+++ b/DGN/Views/Comments/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.RelatedArticle)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RelatedArticle.Body)
+            @Html.DisplayFor(model => model.RelatedArticle.Title)
         </dd class>
     </dl>
     
