--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -55,6 +55,21 @@
     </dl>
 </div>
 <div>
+    <h4>Comments</h4>
+    <hr />
+@foreach (var item in Model.Comments)
+{
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Title)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(modelItem => item.Body)
+        </dd>
+    </dl>
+}
+</div>
+<div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
