--- a/DGN/Views/Comments/Details.cshtml
+++ b/DGN/Views/Comments/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.RelatedArticle)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RelatedArticle.Body)
+            @Html.DisplayFor(model => model.RelatedArticle.Title)
         </dd>
     </dl>
 </div>
