--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -61,7 +61,7 @@
 {
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayFor(modelItem => item.User.FullName)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(modelItem => item.Body)
