Fixed the container issue with the index view

--- a/DGN/Views/Home/Index.cshtml
+++ b/DGN/Views/Home/Index.cshtml
@@ -2,39 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 
-<section class="best-articles container">
-    <article class="card">
-        <a href="#" class="thumb">
-            <img src="https://sm.ign.com/t/ign_il/slotter/default/ignxe32021-deck-27343a-1618410289892_azfy.560.jpg"
-                 alt="E3 2021: Timeline for all the news" class="thumb" />
-            <h3 class="caption">E3 2021: Timeline for all the news</h3>
-        </a>
-    </article>
+<div class="container">
+    <section class="best-articles container">
+        <article class="card">
+            <a href="#" class="thumb">
+                <img src="https://sm.ign.com/t/ign_il/slotter/default/ignxe32021-deck-27343a-1618410289892_azfy.560.jpg"
+                     alt="E3 2021: Timeline for all the news" class="thumb" />
+                <h3 class="caption">E3 2021: Timeline for all the news</h3>
+            </a>
+        </article>
 
-    <article class="card">
-        <a href="#" class="thumb">
-            <img src="https://sm.ign.com/t/ign_il/slotter/default/expertmode-godofwar-deck-2-1622654244684_hv8n.560.jpg"
-                 alt="God of War will blah blah blah" class="thumb" />
-            <h3 class="caption">God of War will blah blah blah</h3>
-        </a>
-    </article>
+        <article class="card">
+            <a href="#" class="thumb">
+                <img src="https://sm.ign.com/t/ign_il/slotter/default/expertmode-godofwar-deck-2-1622654244684_hv8n.560.jpg"
+                     alt="God of War will blah blah blah" class="thumb" />
+                <h3 class="caption">God of War will blah blah blah</h3>
+            </a>
+        </article>
 
-    <article class="card">
-        <a href="#" class="thumb">
-            <img src="https://sm.ign.com/t/ign_il/slotter/default/cruella-deck-1-1622034202955_ekzv.560.jpg"
-                 alt="When is tafkid sheni?" class="thumb" />
-            <h3 class="caption">When is tafkid sheni?</h3>
-        </a>
-    </article>
+        <article class="card">
+            <a href="#" class="thumb">
+                <img src="https://sm.ign.com/t/ign_il/slotter/default/cruella-deck-1-1622034202955_ekzv.560.jpg"
+                     alt="When is tafkid sheni?" class="thumb" />
+                <h3 class="caption">When is tafkid sheni?</h3>
+            </a>
+        </article>
 
-    <article class="card">
-        <a href="#" class="thumb">
-            <img src="https://sm.ign.com/t/ign_il/slotter/default/joy-con-deck-663399-1622104934285_8qk6.560.jpg"
-                 alt="Yoni give me a katzrash" class="thumb" />
-            <h3 class="caption">Yoni give me a katzrash</h3>
-        </a>
-    </article>
-</section>
+        <article class="card">
+            <a href="#" class="thumb">
+                <img src="https://sm.ign.com/t/ign_il/slotter/default/joy-con-deck-663399-1622104934285_8qk6.560.jpg"
+                     alt="Yoni give me a katzrash" class="thumb" />
+                <h3 class="caption">Yoni give me a katzrash</h3>
+            </a>
+        </article>
+    </section>
+</div>
 <section class="hot-articles">
     <div class="wrap">
         <h2>Hottest Articles</h2>
