--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -50,12 +50,10 @@
             </nav>
         </div>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
+    <main role="main" class="main-body" class="pb-3">
+        @RenderBody()
+    </main>
+   
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - DGN - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
