--- a/DGN/wwwroot/css/index.css
+++ b/DGN/wwwroot/css/index.css
@@ -58,8 +58,8 @@ section.best-articles article img, section.hot-articles article img {
 section.best-articles {
     max-width: 1200px;
     display: block;
-    padding: 100px 0px;
     margin: 0px auto;
+    padding-bottom: 100px;
     background: #f3f3f3e6;
     width: 100%;
     box-sizing: border-box;
