Fixed class issue

--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             </nav>
         </div>
     </header>
-    <main role="main" class="main-body" class="pb-3">
+    <main role="main" class="main-body pb-3">
         @RenderBody()
     </main>
    
