--- a/DGN/Views/Comments/Details.cshtml
+++ b/DGN/Views/Comments/Details.cshtml
@@ -23,10 +23,16 @@
             @Html.DisplayFor(model => model.User.Email)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CreationTimestamp)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CreationTimestamp)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RelatedArticle)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RelatedArticle.Title)
+            @Html.DisplayFor(model => model.RelatedArticle.Body)
         </dd>
     </dl>
 </div>
