--- a/DGN/Views/Comments/Edit.cshtml
+++ b/DGN/Views/Comments/Edit.cshtml
@@ -24,6 +24,11 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="CreationTimestamp" class="control-label"></label>
+                <input asp-for="CreationTimestamp" class="form-control" />
+                <span asp-validation-for="CreationTimestamp" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="RelatedArticleId" class="control-label"></label>
                 <select asp-for="RelatedArticleId" class="form-control" asp-items="ViewBag.RelatedArticleId"></select>
                 <span asp-validation-for="RelatedArticleId" class="text-danger"></span>
