--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -57,16 +57,19 @@
 <div>
     <h4>Comments</h4>
     <hr />
-@foreach (var item in Model.Comments)
+@foreach (var item in Model.Comments.OrderByDescending(e => e.CreationTimestamp))
 {
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayFor(modelItem => item.User.FullName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(modelItem => item.Body)
-        </dd>
-    </dl>
+<dl class="row">
+    <dt class="col-sm-2">
+        @Html.DisplayFor(modelItem => item.User.FullName)
+    </dt>
+    <dd class="col-sm-8">
+        @Html.DisplayFor(modelItem => item.Body)
+    </dd>
+    <dd class="col-sm-2">
+        @Html.DisplayFor(modelItem => item.CreationTimestamp)
+    </dd>
+</dl>
 }
 </div>
 <div>
