added profile, need to test it, added session info

--- a/DGN/Views/Users/Index.cshtml
+++ b/DGN/Views/Users/Index.cshtml
@@ -64,8 +64,8 @@
                 @Html.DisplayFor(modelItem => item.About)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="EditAsAdmin" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Profile" asp-route-id="@item.Id">Profile</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
