--- a/DGN/Views/Users/EditAsAdmin.cshtml
+++ b/DGN/Views/Users/EditAsAdmin.cshtml
@@ -1,16 +1,17 @@
 ﻿@model DGN.Models.User
 
 @{
-    ViewData["Title"] = "Edit Profile";
+    ViewData["Title"] = "Edit User";
 }
 
-<h1>Edit Profile</h1>
+<h1>Edit User</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
@@ -35,6 +36,15 @@
                 <label asp-for="Birthday" class="control-label"></label>
                 <input asp-for="Birthday" class="form-control" />
                 <span asp-validation-for="Birthday" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Role" class="control-label"></label>
+                <select asp-for="Role" class="form-control">
+                    <option value="Admin"> Admin </option>
+                    <option value="Author"> Author </option>
+                    <option value="Client" selected> Client </option>
+                </select>
+                <span asp-validation-for="Role" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="About" class="control-label"></label>
