--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -40,10 +40,10 @@
                     </ul>
                     <ul class="navbar-nav nav-menu ml-auto">
                         <li class="nav-item btn-item">
-                            <a href="#" class="nav-btn register-btn">Register</a>
+                            <a href="/Users/Register" class="nav-btn register-btn">Register</a>
                         </li>
                         <li class="nav-item last btn-item">
-                            <a href="#" class="nav-btn login-btn">Login</a>
+                            <a href="/Users/Login" class="nav-btn login-btn">Login</a>
                         </li>
                     </ul>
                 </div>
