--- a/DGN/Views/Comments/Create.cshtml
+++ b/DGN/Views/Comments/Create.cshtml
@@ -17,14 +17,14 @@
                 <textarea asp-for="Body" class="form-control"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
-            <div class="form-group">
+            </div>*@
+            @*<div class="form-group">
                 <label asp-for="RelatedArticleId" class="control-label"></label>
                 <select asp-for="RelatedArticleId" class ="form-control" asp-items="ViewBag.RelatedArticleId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
