--- a/DGN/Views/Comments/Delete.cshtml
+++ b/DGN/Views/Comments/Delete.cshtml
@@ -39,6 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="RelatedArticleId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
