--- a/DGN/Views/Users/Edit.cshtml
+++ b/DGN/Views/Users/Edit.cshtml
@@ -9,7 +9,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
+            <input type="hidden" asp-for="Id" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
@@ -41,6 +42,11 @@
                 <textarea asp-for="About" class="form-control"></textarea>
                 <span asp-validation-for="About" class="text-danger"></span>
             </div>
+            <div>
+                <label class="control-label">Upload Profile Image</label>
+                <input type="file" name="ImageFile" id="ImageFile"/>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
