--- a/DGN/Views/Comments/Edit.cshtml
+++ b/DGN/Views/Comments/Edit.cshtml
@@ -20,19 +20,19 @@
             </div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId" readonly></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreationTimestamp" class="control-label"></label>
-                <input asp-for="CreationTimestamp" class="form-control" />
+                <input asp-for="CreationTimestamp" class="form-control" readonly/>
                 <span asp-validation-for="CreationTimestamp" class="text-danger"></span>
             </div>
-            <div class="form-group">
+@*            <div class="form-group">
                 <label asp-for="RelatedArticleId" class="control-label"></label>
                 <select asp-for="RelatedArticleId" class="form-control" asp-items="ViewBag.RelatedArticleId"></select>
                 <span asp-validation-for="RelatedArticleId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
