--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="container">
+    <h2 class="text-center">Contact Us</h2><br />
     <div class="row">
         <div class="col-md-12 map">
             <div id="myMap" style="width:100%; height:610px;"></div>
