--- a/DGN/Views/Branches/Create.cshtml
+++ b/DGN/Views/Branches/Create.cshtml
@@ -58,5 +58,5 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/braches.css" />
+    <link rel="stylesheet" href="~/css/branches.css" />
 }
