--- a/DGN/Views/Branches/Edit.cshtml
+++ b/DGN/Views/Branches/Edit.cshtml
@@ -59,5 +59,5 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/braches.css" />
+    <link rel="stylesheet" href="~/css/branches.css" />
 }
