--- a/DGN/Views/Users/AccessDenied.cshtml
+++ b/DGN/Views/Users/AccessDenied.cshtml
@@ -9,6 +9,6 @@
         <h4 class="alert-heading">UnAuthorized!</h4>
         <p>Owww sorry, but it seems that you are unauthorized to access this page.</p>
         <hr>
-        <a class="mb-0" asp-action="Logout">Click here to signin using a different user</a>
+        <a class="mb-0" asp-action="Logout">Click here to login using a different user</a>
     </div>
 </div>
