--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -28,27 +28,21 @@
     </div>
 </div>
 
-<div hidden>
-    <h4>Comments</h4>
-    <hr />
+<div class="container">
+    <br />
+    <p class="h4">Comments</p>
+    <br />
     @foreach (var item in Model.Comments.OrderByDescending(e => e.CreationTimestamp))
     {
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayFor(modelItem => item.User.FullName)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.Body)
-            </dd>
-        </dl>
-        <dl class="row">
-            <dd class="col-sm-4 offset-2">
-                @Html.DisplayFor(modelItem => item.CreationTimestamp)
-            </dd>
-            <dd class="col-sm-6">
+        <div class="card text-dark bg-light mb-3" style="max-width: 100%;">
+            <div class="card-body">
+                <h5 class="card-title">@Html.DisplayFor(modelItem => item.User.FullName)</h5>
+                <p class="card-text">@Html.DisplayFor(modelItem => item.Body)</p>
+            </div>
+            <div class="card-footer bg-light">
                 <a asp-controller="Comments" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-controller="Comments" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </dd>
-        </dl>
+            </div>
+        </div>
     }
 </div>
