--- a/DGN/Views/Comments/Index.cshtml
+++ b/DGN/Views/Comments/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.CreationTimestamp)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RelatedArticle.Body)
+                @Html.DisplayFor(modelItem => item.RelatedArticle.Title)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
